[package]
name = "matchering-rs"
version = "0.1.0"
authors = ["Price Smith psmith.code@gmail.com"]
description = "A rust lib port of Sergree's Matchering."
license = "gplv3"
repository = ""
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
ndarray = "0.15.3"
ndarray-image = "0.3.0"
