[package]
name = "matchering-rs"
version = "0.1.0"
authors = ["Price Smith psmith.code@gmail.com"]
description = "A rust lib port of Sergree's Matchering."
license = "gplv3"
repository = ""
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook", "wasm_custom_section", "wasm_import_module"]

[dependencies]
wasm-bindgen = "0.2.63"
ndarray = "0.15.3"
ndarray-image = "0.3.0"
samplerate = "0.2.4"
more-asserts = "0.2.1"
conditional = "0.1.1"
proc-macro2 = "1.0.29"
num-traits = "0.2.14"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
